--- a/source/csharp/ServiceClient/MainWindow.xaml
+++ b/source/csharp/ServiceClient/MainWindow.xaml
@@ -7,6 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button x:Name="btn_ricerca" Content="Ricerca" HorizontalAlignment="Left" Margin="36,78,0,0" VerticalAlignment="Top" Width="103" Click="Btn_ricerca_Click" Height="28"/>
+        <TextBox x:Name="txt_libri" HorizontalAlignment="Left" Height="23" Margin="202,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txt_reparti" HorizontalAlignment="Left" Height="23" Margin="356,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <ListBox x:Name="lst_elenco" HorizontalAlignment="Left" Height="363" Margin="500,37,0,0" VerticalAlignment="Top" Width="274"/>
+        <ComboBox x:Name="cmb_selezione" HorizontalAlignment="Left" Margin="36,37,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cmb_selezione_SelectionChanged">
+            <ListBoxItem Content="Quantità"/>
+            <ListBoxItem Content="Scontati"/>
+            <ListBoxItem Content="Libri Archiviati"/>
+        </ComboBox>
+        <Label x:Name="lbl_1" Content="" HorizontalAlignment="Left" Margin="202,6,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lbl_2" Content="" HorizontalAlignment="Left" Margin="356,6,0,0" VerticalAlignment="Top" Width="120"/>
+
     </Grid>
 </Window>
